--- a/css/tunnel.css
+++ b/css/tunnel.css
@@ -1,5 +1,5 @@
 .tunnel-bg{
-    background-image: /* linear-gradient(360deg , rgba(0,0,0,1),rgba(0,0,0,0.3),rgba(0,0,0,0)),
+    /**background-image:  linear-gradient(360deg , rgba(0,0,0,1),rgba(0,0,0,0.3),rgba(0,0,0,0)),
                             url(../img/tunnel/2N9u_NuDi7V9SAe.gif) !important; **/
     
 			background-image:linear-gradient(360deg , rgba(0,0,0,1),rgba(0,0,0,0.3),rgba(0,0,0,0)), 
