--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 /* hero image */
 .main-container{
     height: 100vh;
+    max-height: 100vh;
+    min-height:100vh;
     width: 100%;
     background-image:linear-gradient(360deg , rgba(0,0,0,1),rgba(0,0,0,0.3),rgba(0,0,0,0)),
     url(../img/hero/LVCC+Loop+Hero+2_April+2021.jpg);
@@ -9,6 +11,7 @@
     background-attachment:local;
     z-index: 90;
 }
+
 /* header */
 .main-container .header{
     width: 100%;
@@ -156,7 +159,9 @@
 /* tunnels */
 .tunnel{
     width: 100%;
-    height: 100vh;
+    max-height: 100vh;
+    min-height:100vh;
+    height: 100vh !important;
     background-image:linear-gradient(360deg , rgba(0,0,0,1),rgba(0,0,0,0.3),rgba(0,0,0,0)),
     url(../img/hero/Tunnel+photo+1.jpg);
     display: flex;
@@ -216,7 +221,6 @@
     background-image:linear-gradient(360deg , rgba(0,0,0,1),rgba(0,0,0,0.3),rgba(0,0,0,0)),
                         url(../img/hero2/loop.jpg);
     display: flex;
-    background-attachment: fixed;
     align-items: center;
     padding:20px 80px;
     background-size: cover;
@@ -277,7 +281,6 @@
     padding:20px 80px;
     background-size: cover;
     z-index: 87;
-    background-attachment: fixed;
 }
 .prufrock .prufrock-info{
     max-width: 700px;
