--- a/css/tunnel.css
+++ b/css/tunnel.css
@@ -1,9 +1,9 @@
 .tunnel-bg{
-    background-image:linear-gradient(360deg , rgba(0,0,0,1),rgba(0,0,0,0.3),rgba(0,0,0,0)),
-                            url(../img/tunnel/2N9u_NuDi7V9SAe.gif) !important;
+    /* background-image: linear-gradient(360deg , rgba(0,0,0,1),rgba(0,0,0,0.3),rgba(0,0,0,0)),
+                            url(../img/tunnel/2N9u_NuDi7V9SAe.gif) !important;  */
     
-    /* background-image:linear-gradient(360deg , rgba(0,0,0,1),rgba(0,0,0,0.3),rgba(0,0,0,0)),  */
-                             /* url(https://images.squarespace-cdn.com/content/v1/6063b0835f68896079d7d643/1618430018698-FEQ5QFCQ8TVADEUHC4ST/ke17ZwdGBToddI8pDm48kKmw982fUOZVIQXHUCR1F55Zw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpyd4Y7UZK2xeLnx1ebgr6RQsJXMVu21YAFsC8v7yP4SzpC9M16ov_6v_os-bsIuXDE/2N9u_NuDi7V9SAe+%281%29+%281%29.gif?format=2500w) !important;  */
+     background-image:linear-gradient(360deg , rgba(0,0,0,1),rgba(0,0,0,0.3),rgba(0,0,0,0)), 
+                              url(https://images.squarespace-cdn.com/content/v1/6063b0835f68896079d7d643/1618430018698-FEQ5QFCQ8TVADEUHC4ST/ke17ZwdGBToddI8pDm48kKmw982fUOZVIQXHUCR1F55Zw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpyd4Y7UZK2xeLnx1ebgr6RQsJXMVu21YAFsC8v7yP4SzpC9M16ov_6v_os-bsIuXDE/2N9u_NuDi7V9SAe+%281%29+%281%29.gif?format=2500w) !important;  
                             
 }
 .why-tunnel{
